--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.19.2",
     "express-http-proxy": "^2.0.0",
     "express-rate-limit": "^7.4.0",
+    "jsonwebtoken": "^9.0.0",
     "winston": "^3.13.1"
   },
   "devDependencies": {
