--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/parkingLotsNotifier/parkerai-api-gateway#readme",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "circular-json": "^0.5.9",
